fix: AllData content overflow fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,5 +43,5 @@
 #root {
   margin-left: auto;
   margin-right: auto;
-  max-width: 800px;
+  max-width: 900px;
 }
